<ItemGroup> added (.csproj)

--- a/CIS2055 - Nemesys/CIS2055 - Nemesys/CIS2055 - Nemesys.csproj
+++ b/CIS2055 - Nemesys/CIS2055 - Nemesys/CIS2055 - Nemesys.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>CIS2055___Nemesys</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Interfaces" />
+  </ItemGroup>
+
 </Project>
