--- a/CIS2055 - Nemesys/CIS2055 - Nemesys/appsettings.json
+++ b/CIS2055 - Nemesys/CIS2055 - Nemesys/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;user=SA;password=Guitarist&Tolkienist200012094;Database=first_db;Integrated Security=false;Trusted_Connection=False;MultipleActiveResultSets=true"
+  } 
 }
