--- a/CIS2055 - Nemesys/CIS2055 - Nemesys/CIS2055 - Nemesys.csproj
+++ b/CIS2055 - Nemesys/CIS2055 - Nemesys/CIS2055 - Nemesys.csproj
@@ -30,6 +30,7 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="6.0.5" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0" />
+    <PackageReference Include="SendGrid" Version="9.28.0" />
   </ItemGroup>
 
 </Project>
